welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:9: error: not found: value Biscuits
    Biscuits = Biscuits + 1
    ^